# StockManager_Cpp_Project

./: CMakeLists.txt  README.md
include/: current_time.h  menu.h  product.h
src/: current_time.cpp  main.cpp  menu.cpp  product.cpp
